--- a/css/estilos.css
+++ b/css/estilos.css
@@ -245,7 +245,9 @@ animation-name: flotante;
     animation-timing-function: ease-in-out;
 margin-left: 30px;
 margin-top: 5px;
-padding:17px
+padding: 22px;
+
+
     
 }
 
