--- a/pages/components/_main.scss
+++ b/pages/components/_main.scss
@@ -35,7 +35,7 @@ p{
 }
 .fondo {
     background-position: center;
-   background-color:#f6d0d9 ;
+   background-color:$bgcolor;
     background-size: contain;
     
 }
@@ -49,7 +49,7 @@ p{
 
 .menu {
     display: flex;
-    background-color: #f6d0d9;
+    background-color: $bgcolor;
     font-family: 'Cinzel Decorative', cursive;
     text-decoration: none;
     font-size:large;
@@ -269,3 +269,4 @@ padding: 22px;
     }
        
 }
+ 
