--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
 
 .padre-flex {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction:row-reverse;
+  justify-content: row;
   justify-content: space-around;
 }
 
