--- a/pages/components/_main.scss
+++ b/pages/components/_main.scss
@@ -19,6 +19,7 @@ p{
     display: inline;
     background-color: #F6CED8;
     padding-top: 15px ;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 
@@ -56,7 +57,7 @@ p{
     text-decoration: none;
     font-size:large;
     padding: auto;
-    justify-content: center;
+    justify-content:center;
     
     
   
@@ -71,11 +72,12 @@ p{
       
 }
 
+
 .imagen-principal {
     display: flex;
     flex-direction: row;
-    height: 50%;
-    width: 50%;
+    height: 50px;
+    width: 50px;
     margin-top: 10px;
     
     
@@ -90,6 +92,8 @@ p{
     
 
 }
+
+
 .caja-producto {
     display: grid;
     grid-template-columns: 33% 33% 33%;
@@ -133,14 +137,7 @@ p{
 }
 
 
-
-.contacto {
-    display: flex;
-    flex-direction:column;
-    justify-content: flex-start;
-    height: 100px;
-    width: 500px;
-}
+    
 
 
 
